Implemented: - Algorithm for binary pass based on weights; - Line entity for better collisions control; - GSAP animations for ball and pegs; - Statistic counter;

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "matter-js": "^0.19.0",
+    "mersenne-twister": "^1.1.0",
     "pixi.js": "^7.2.4"
   }
 }
