--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "chroma-js": "^2.4.2",
     "gsap": "^3.12.2",
     "matter-js": "^0.19.0",
     "mersenne-twister": "^1.1.0",
