--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.4",
     "css-minimizer-webpack-plugin": "^5.0.0",
+    "file-loader": "^6.2.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
     "style-loader": "^3.3.3",
@@ -25,6 +26,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@pixi/sound": "^5.2.1",
     "chroma-js": "^2.4.2",
     "gsap": "^3.12.2",
     "matter-js": "^0.19.0",
